[package]
name = "spectral-fleet"
version = "0.1.0"
edition = "2024"
description = "Spectral graph theory for AI agent fleet analysis and optimization"
license = "MIT"
repository = "https://github.com/SuperInstance/spectral-fleet"
keywords = ["graph", "spectral", "clustering", "fleet", "agents"]
categories = ["mathematics", "science"]

[dependencies]
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
