[package]
name = "spectral-fleet"
version = "0.2.0"
edition = "2021"
description = "Spectral graph theory for fleet analysis — eigenvalues, Fiedler vector, spectral clustering"
license = "MIT"
keywords = ["spectral", "graph", "fleet", "clustering", "eigenvalue"]
categories = ["mathematics", "algorithms"]
repository = "https://github.com/SuperInstance/spectral-fleet"

[dependencies]
